Implemented configurable multiple hosted folders

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,7 +33,7 @@
 <nav class="breadcrumb is-small" aria-label="breadcrumbs">
   <ul>
     <li th:each="bc,iterStat : ${breadcrumbs}">
-        <a th:href=" '/b' + ${@files.linkPath(bc, basePath)}" th:text="${bc.name}" th:classappend="${iterStat.last? 'is-active' : ''}">Bulma</a>
+        <a th:href=" '/b/' + ${baseId} + ${@files.linkPath(bc, basePath)}" th:text="${bc.name}" th:classappend="${iterStat.last? 'is-active' : ''}">Bulma</a>
       </li>
   </ul>
 </nav>
@@ -57,8 +57,8 @@
 	                            <td>
 		                            <a href="#" class="item"
 		                                th:href="@{${file.isDirectory()} ?
-		                                    '/b' + ${@files.linkPath(file, basePath)}
-		                                  : '/d' + ${T(org.apache.commons.lang3.StringUtils).removeStart(file.path, basePath)}}"
+		                                    '/b/' + ${baseId} + ${@files.linkPath(file, basePath)}
+		                                  : '/d/' + ${baseId} + ${@files.linkPath(file, basePath)}}"
 		                            >
 		                                <span class="icon"><i class="fa" th:classappend="${file.isDirectory()} ? fa-folder : fa-file"></i></span>
 		                                <span class="name" th:text="${file.name}">filename</span>
