--- a/src/main/resources/templates/tail.html
+++ b/src/main/resources/templates/tail.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="layout/default :: layout('Tail page', ~{::#content}, ~{})">
+<html xmlns:th="http://www.thymeleaf.org"
+	th:replace="layout/default :: layout('Tail page', ~{::#content}, ~{::#pageJs})">
 <div id="content">
-<noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript! Websocket relies on Javascript being
-    enabled. Please enable
-    Javascript and reload this page!</h2></noscript>
+	<noscript>
+		<h2 style="color: #ff0000">Seems your browser doesn't support
+			Javascript! Websocket relies on Javascript being enabled. Please
+			enable Javascript and reload this page!</h2>
+	</noscript>
+
+	<script type="text/javascript" th:inline="javascript">
+		var wsPath = /*[[@{${wsPath}}]]*/"filepath";
+		var wsUrl = /*[[@{${wsPath}}]]*/"filepath";
+		console.log(wsPath);
+	</script>
+	<!-- <script th:src="@{/js/tail/tail-controller.js}"></script> -->
 
 
-  <h1>Tailer :)</h1>
-  <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 
-  <script th:src="@{/webjars/stimulus/dist/stimulus.umd.js}"></script>
-  <script th:src="@{/js/tail/tail-controller.js}"></script>
+	<div data-controller="tailer">
+		<button class="button is-small is-inverted" data-target="tailer.pause" data-action="click->tailer#toggle">Stop tailing</button>
+		<label class="checkbox"> <input id="follow" data-target="tailer.follow" type="checkbox" checked="checked">
+			Follow lines
+		</label>
 
-  <script type="text/javascript" th:inline="javascript">
-	  var wsPath = /*[[@{${wsPath}}]]*/ "filepath";
-	  console.log(wsPath);
-  </script>
-
-  <div data-controller="tail">
-     <button id="connect" class="btn btn-default" data-action="click->tail#tailIt">Connect</button>
-    <button id="disconnect" class="btn btn-default" type="submit" disabled="disabled">Disconnect</button>
-
-     <pre data-target="tail.file" id="file" style="height: 45rem;" >a</pre>
-  </div>
+		<div data-target="tailer.output" id="output" style="height: 45rem;">
+	  </div>
+	</div>
 </div>
 
+<th:block id="pageJs">
+	<script>
+		requirejs([ '/js/tail/tailer.js' ], function() {
+		});
+	</script>
+</th:block>
 </html>
