--- a/src/main/resources/templates/tail.html
+++ b/src/main/resources/templates/tail.html
@@ -30,7 +30,7 @@
 
 <th:block id="pageJs">
 	<script>
-		requirejs([ '/js/tail/tailer.js' ], function() {
+		requirejs([ '[[@{'/js/tail/tailer.js'}]]'  ], function() {
 		});
 	</script>
 </th:block>
