--- a/src/main/resources/static/css/logcock.css
+++ b/src/main/resources/static/css/logcock.css
@@ -139,7 +139,7 @@ html,body {
   padding-top: 0;
   margin-bottom: 3px;
   font-size:12px;
-  color: #AAAAA;
+  color: #AAAAAA;
 }
 .action-buttons .pg a{
   font-size:12px;
