--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/webjars/bulma/css/bulma.min.css}" />
+    <link rel="stylesheet" th:href="@{/css/logcock.css}" />
 
 
 </head>
@@ -46,6 +47,11 @@
     <script th:src="@{/webjarsjs}"></script>
     <script th:src="@{/webjars/requirejs/require.min.js}"></script>
     <script> requirejs([ '[[@{'/js/app.js'}]]' ], function() { }); </script>
+    <script th:src='@{/webjars/tablesort/5.2.0/dist/tablesort.min.js}'></script>
+    <script>
+      new Tablesort(document.getElementById('files'));
+    </script>
+
     <th:block th:replace="${pageJs}"></th:block>
 </th:block>
 </html>
