--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="layout/default :: layout('Logcock - file browser', ~{::#content}, ~{})">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="layout/default :: layout('Logcock - file browser', ~{::#content}, ~{::#pageJs})">
 <div id="content">
 
 <nav class="breadcrumb is-small" aria-label="breadcrumbs">
@@ -35,12 +35,18 @@
                                 ><span class="icon has-text-info"> <i class="fas fa-download"></i> </span>
                                 </a>
 
+                               <a href="#" class="button is-small masked-download" th:disabled="${file.isDirectory()}"
+                                    th:href="@{${file.isDirectory()} ?
+                                        '/b/' + ${baseId} + ${@files.linkPath(file, basePath)}
+                                      : '/md/' + ${baseId} + ${@files.linkPath(file, basePath)}}"
+                                ><span class="icon has-text-info"> <i class="fas fa-user-secret"></i> </span>
+                                </a>
+
                                <a class="button is-small"  th:href="@{${file.isDirectory()} ?
                                         '/b/' + ${baseId} + ${@files.linkPath(file, basePath)}
                                       : '/t/' + ${baseId} + ${@files.linkPath(file, basePath)}}"
                                 ><span class="icon has-text-info"> <i class="fas fa-eye"></i> </span>
-
-                                      </a>
+                               </a>
                              </td>
 
                               <td class="is-size-7" data-sort-column-key="price">
@@ -69,4 +75,10 @@
   </div>
 
 </div>
+<th:block id="pageJs">
+  <script>
+    requirejs([ '[[@{'/js/list/list.js'}]]'  ], function() {
+    });
+</script>
+</th:block>
 </html>
